# IG3DA-Project

./: README.md
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/: CMakeLists.txt  README.md  test_command.txt
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Resources/Shaders/: UsageOfGenerateShader.md
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/camera/: cameraController.cpp  cameraController.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/helpers/: logger.cpp  satGenerator.cpp  utility.cpp  utility.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/input/: keyInput.cpp  keyInput.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/light/: baseLight.hpp  directLight.cpp  pointLight.cpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/material/: material.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/mesh/: meshGenerator.cpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/rasterizer/: rasterizer.cpp  rasterizer.hpp  renderMethod.cpp  renderMethod.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/scene/: sceneManager.cpp  sceneManager.hpp  sceneObject.cpp  sceneObject.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/shadermgr/: shaderManager.cpp  shaderManager.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/shadow/: shadow.cpp  shadow.hpp
codes/RenderEngine-branch2-For-implementation-of-VSSM-IG3DA-project-/Sources/spatial_structure/: AABB.cpp
(+22 files in other folders)
